--- a/reports/appendix.ipynb
+++ b/reports/appendix.ipynb
@@ -54,6 +54,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Geopandas library to work with Chicago map\n",
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PARENT_PATH = str(Path().resolve().parent) + \"/\"\n",
+    "PATH = \"data/\"\n",
+    "SUBPATH = \"external/\"\n",
+    "FILE = \"wards\"\n",
+    "FORMAT = \".shp\"\n",
+    "\n",
+    "gdf = gpd.read_file(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df.head()"
    ]
   },
@@ -427,6 +452,92 @@
     ").configure_view(strokeOpacity=0)\n",
     "\n",
     "layer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "district_5 = alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X(\"district:N\",\n",
+    "    sort=\"-y\",\n",
+    "    axis=alt.Axis(title=\"DISTRICT\",  \n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y(\"count(primary_type):Q\",\n",
+    "    axis=alt.Axis(title=\"COUNT\",  \n",
+    "                          titleAnchor=\"end\")),\n",
+    "    color=alt.condition(\n",
+    "        alt.FieldOneOfPredicate('district', [11, 6, 8, 1, 18]),  # If the district is 11 this test returns True,\n",
+    "        alt.value('orange'),     # which sets the bar orange.\n",
+    "        alt.value('steelblue')   # And if it's not true it sets the bar steelblue.\n",
+    "    ),\n",
+    "    tooltip=[\"count(primary_type)\"]\n",
+    ").properties(\n",
+    "    title='Count of commited crime in the districts',\n",
+    "    width=1000,\n",
+    "    height=400\n",
+    ").configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)\n",
+    "\n",
+    "district_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#primary_type per district\n",
+    "\n",
+    "order_crime = [\"theft\", \"assault_and_battery\",\"criminal_damage\", \"deceptive_practice\", \"burglary\", \"other_offense\", \"robbery_and_weapons\", \"narcotics\", \"homicide\", \"sexual_crime\"]\n",
+    "\n",
+    "alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X('count(primary_type)', stack=\"normalize\",\n",
+    "    axis=alt.Axis(format=\"%\",title = \"PERCENT\", \n",
+    "                          titleAnchor=\"start\")),\n",
+    "    y=alt.Y('district:N',\n",
+    "    axis=alt.Axis(title = \"DISTRICT\", \n",
+    "                          titleY=25)),\n",
+    "    color=alt.Color('primary_type', sort=order_crime),\n",
+    "    tooltip=[\"primary_type\", alt.Tooltip('count(primary_type)', title='count')]\n",
+    ").properties(\n",
+    "    title='Distribution of crime types per district',\n",
+    "    width=1000,\n",
+    "    height=800\n",
+    ").configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df[(df['district']==1) & (df['block'] == \"state_st\") & (df['primary_group'] == \"group_1\")]) #951 Fälle für state street in district 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df[(df['block'] == \"ashland_ave\")]) # kedzie_ave 92, pulaski_rd 213, western_ave 27, madison_st 274"
    ]
   }
  ],
