--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "source": [
     "### Distribution of crimes per year in months\n",
-    "Most crimes occour in spring/summer from May to August."
+    "Most crimes occour in spring/summer from May to August. But there is no significant increase or decrease over the other months."
    ]
   },
   {
@@ -396,30 +396,6 @@
     ").configure_view(strokeOpacity=0)\n",
     "\n",
     "layer"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Distribution of crimes per block/street\n",
-    "\n",
-    "The 5 streets with the most reported crimes are:\n",
-    "- 1. State Street (1575)\n",
-    "- 2. Michigan Avenue (1520)\n",
-    "- 3. Halsted Street (1049)\n",
-    "- 4. Ashland Avenue (925)\n",
-    "- 5. Clark Street (845)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"block\"].value_counts().nlargest(10)"
    ]
   },
   {
@@ -865,6 +841,8 @@
     "- 4. District 1 (4560)\n",
     "- 5. District 18 (4485)\n",
     "\n",
+    "It also makes sense to open the Crime Prevention Center in certain streets, as there are some very violent streets. Some of those streets are going across 2 districts like the State street, which is also the most violent street in Chicago.\n",
+    "\n",
     "We also understand that the Prevention Center can't be open 24 hours a day, so we would adapt their opening hours to the time when the most crime happen statisticly. We would suggest opening times at least from 11am to 8 pm because this are the most violent hours, especially at 12pm and 7 pm. The 5 most violent hours are:\n",
     "\n",
     "- 1. 12pm   (4663 incidents)\n",
@@ -899,12 +877,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:50:36) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "afb2be5e0fa59e7cc779d156738954d1f1d32fb360bdb57d692d068a241e7d01"
+    "hash": "d2f2d2082dad434e9227570e7053f7112e7d2c1e0982d1c6c76272549d47fe44"
    }
   }
  },
