--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -1,10 +1,28 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Report"
+    "---\n",
+    "format:\n",
+    "  html:\n",
+    "    theme: zephyr\n",
+    "    code-fold: true\n",
+    "    embed-resources: true\n",
+    "jupyter: python3\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Report\n",
+    "\n",
+    "#### Group B - Esad Skenderi & Hendrik Pfeifer"
    ]
   },
   {
@@ -21,18 +39,17 @@
    "source": [
     "### Subject Matter:\n",
     "\n",
-    "In the city of Chicago, many incidents/crimes happen every day, from minor thefts to murders. To reduce the violence in the city, the city wants to open a new crime prevention centre. Now the city is asking our team which crimes occur particularly frequently,  where and when do they happen. With this information, the **Crime Prevention Center** can be built in a particularly well-situated location. In addition, the specialised departments of the centre can be trained for the relevant criminal offences. This should make Chicago a safer city and ensure that measures are taken at an early stage to prevent crime. Therefore we would like to analyse where and when it makes the most sense to open the Crime Prevention Center to gain the most success.\n",
+    "In the city of Chicago, many incidents/crimes happen every day, from minor thefts to murders. To reduce the violence in the city, the city wants to open new crime prevention centers. Now the city is asking our team which crimes occur particularly frequently,  where and when do they happen. With this information, the **Crime Prevention Centers** can be built in particularly well-situated locations. In addition, the specialised departments of the center can be trained for the relevant criminal offences. This should make Chicago a safer city and ensure that measures are taken at an early stage to prevent crime. Therefore we would like to analyse where and when it makes the most sense to open the Crime Prevention Centers to gain the most success.\n",
     "\n",
     "### Motivation:\n",
     "Parts of Chicago are one of the most violent and dangerous neighborhoods in the United States. We would like to help the city to prevent some crimes in the future and let Chicago live up to its potential!\n",
     "\n",
-    "Various studies show that it is possible to prevent crime in cities with the help of specific actions. With the new **Crime Prevention Center**, we want to take a new approach in Chicago to prevent crime from the very beginning.\n",
+    "Various studies show that it is possible to prevent crime in cities with the help of specific actions. With the new **Crime Prevention Centers**, we want to take a new approach in Chicago to prevent crime from the very beginning.\n",
     "\n",
-    "* Crime Prevention and the Safer Cities Story\n",
-    "https://onlinelibrary.wiley.com/doi/10.1111/j.1468-2311.1993.tb00758.x\n",
+    "* <a href=\"https://onlinelibrary.wiley.com/doi/10.1111/j.1468-2311.1993.tb00758.x\">Crime Prevention and the Safer Cities Story</a>\n",
     "\n",
-    "* Social Crime Prevention in South Africa's Major Cities \n",
-    "http://csvr.org.za/docs/urbansafety/socialcrimeprevention.pdf\n",
+    "\n",
+    "* <a href=\"http://csvr.org.za/docs/urbansafety/socialcrimeprevention.pdf\">Social Crime Prevention in South Africa's Major Cities </a>\n",
     "\n",
     "\n",
     "\n",
@@ -40,7 +57,7 @@
     "### General Question:\n",
     "\n",
     "Which kind of crimes happen particularly frequently and where/when do they happen?\n",
-    "Where should we open the new Crime Prevention Center?\n",
+    "Where should we open the new Crime Prevention Centers?\n",
     "\n",
     "### Hypotheses:\n",
     "\n",
@@ -59,7 +76,7 @@
     "\n",
     "* **Arrest** Indicates whether an arrest was made.\t\n",
     "\t\n",
-    "* **District** Indicates the police district where the incident occurred. See the districts at https://data.cityofchicago.org/d/fthy-xz3r.\t\n",
+    "* **District** Indicates the police district where the incident occurred. See the districts <a href=\"ttps://data.cityofchicago.org/d/fthy-xz3r\">here</a> .\t\n",
     "\n",
     "* **Year** Year the incident occurred.\t\n",
     "\n",
@@ -83,17 +100,24 @@
     "\n",
     "Crimes - 2001 to Present\n",
     "\n",
-    "This dataset reflects reported incidents of crime (with the exception of murders where data exists for each victim) that occurred in the City of Chicago from 2001 to present, minus the most recent seven days. Data is extracted from the Chicago Police Department's CLEAR (Citizen Law Enforcement Analysis and Reporting) system. In order to protect the privacy of crime victims, addresses are shown at the block level only and specific locations are not identified. More information about this dataset: https://catalog.data.gov/dataset/crimes-2001-to-present\n",
+    "This dataset reflects reported incidents of crime (with the exception of murders where data exists for each victim) that occurred in the City of Chicago from 2001 to present, minus the most recent seven days. Data is extracted from the Chicago Police Department's CLEAR (Citizen Law Enforcement Analysis and Reporting) system. In order to protect the privacy of crime victims, addresses are shown at the block level only and specific locations are not identified. Find more information about this dataset <a href=\"https://catalog.data.gov/dataset/crimes-2001-to-present\">here</a>. \n",
     "\n",
     "### EDA\n",
     "\n",
     "The following section contains the EDA. Most of the data preparation and cleaning of the raw data was done separately.\n",
+    "\n",
     "- Data transformation and handling missing values. \n",
+    "\n",
     "- Unnecessary observations and variables were deleted.\n",
+    "\n",
     "- The variable \"date\" was converted into \"month\", \"hour\" and \"days\". \n",
+    "\n",
     "- The original 33 \"primary_type\" variables were converted into 10 \"primary_type\" variables and being renamed.\n",
+    "\n",
     "- Creation of smaller datasets.\n",
+    "\n",
     "- Preparation of the map-dataset for visualisation.\n",
+    "\n",
     "\n"
    ]
   },
@@ -109,67 +133,47 @@
     "PATH = \"data/\"\n",
     "SUBPATH = \"processed/\"\n",
     "FILE = \"chicago_crimes-20230130-1108\"\n",
-    "FORMAT = \".csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "FORMAT = \".csv\"\n",
+    "\n",
     "import altair as alt\n",
     "from vega_datasets import data\n",
     "alt.data_transformers.disable_max_rows()\n",
     "\n",
     "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#drop observations which did not made it into our report\n",
-    "df.drop(['id', 'ward', 'day'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#load crime dataset\n",
+    "df = pd.read_csv(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)\n",
+    "\n",
     "#Geopandas library to work with Chicago map\n",
-    "import geopandas as gpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import geopandas as gpd\n",
+    "\n",
     "PARENT_PATH = str(Path().resolve().parent) + \"/\"\n",
     "PATH = \"data/\"\n",
     "SUBPATH = \"external/\"\n",
     "FILE = \"wards\"\n",
     "FORMAT = \".shp\"\n",
     "\n",
-    "gdf = gpd.read_file(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)"
+    "#load map dataset\n",
+    "gdf = gpd.read_file(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)\n",
+    "\n",
+    "#drop observations which did not made it into our report\n",
+    "df.drop(['id', 'ward', 'day'], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "cat_list = [\"block\",\"primary_type\", \"primary_group\", \"district\", \"year\", \"month\", \"hour\"]\n",
+    "\n",
+    "#convert to category\n",
+    "for i in cat_list:\n",
+    "    df[i] = df[i].astype(\"category\")\n",
+    "\n",
+    "date_list = [\"date\"]\n",
+    "\n",
+    "#convert date to datetime\n",
+    "for i in date_list:\n",
+    "    df[i] = df[i].astype(\"datetime64\")"
    ]
   },
   {
@@ -450,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#top 5 districts\n",
+    "#top 5 districts in percent\n",
     "df[\"district\"].value_counts(normalize=True).nlargest(5) * 100"
    ]
   },
@@ -470,6 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#top 5 districts in total\n",
     "df[\"district\"].value_counts().nlargest(5)"
    ]
   },
@@ -528,7 +533,7 @@
    "outputs": [],
    "source": [
     "#Barchart with different groups of crime\n",
-    "# we bulit these groups sorted according to gravity\n",
+    "# we bulit these groups sorted according to gravity of the crimes\n",
     "\n",
     "ch = alt.Chart(df).mark_bar().encode(\n",
     "    y=alt.Y('count(primary_group)', \n",
@@ -695,7 +700,7 @@
     "    empty='none'     # empty selection includes no data points\n",
     ")\n",
     "\n",
-    "chart_5 = alt.Chart().mark_line().encode(\n",
+    "chart_6 = alt.Chart().mark_line().encode(\n",
     "    x=alt.X('hour:N',\n",
     "            axis=alt.Axis(title=\"HOUR\",\n",
     "                          titleAnchor=\"start\",\n",
@@ -708,20 +713,20 @@
     "\n",
     "\n",
     "alt.layer(\n",
-    "    chart_5,\n",
+    "    chart_6,\n",
     "    alt.Chart().mark_rule(color='lightgrey').encode(\n",
     "        x='hour:N'\n",
     "    ).transform_filter(label),\n",
     "\n",
-    "chart_5.mark_circle().encode(\n",
+    "chart_6.mark_circle().encode(\n",
     "        opacity=alt.condition(label, alt.value(1), alt.value(0))\n",
     "    ).add_selection(label),\n",
     "\n",
-    "chart_5.mark_text(align='left', dx=5, dy=-5, stroke='white', strokeWidth=2).encode(\n",
+    "chart_6.mark_text(align='left', dx=5, dy=-5, stroke='white', strokeWidth=2).encode(\n",
     "        text='count(primary_type)'\n",
     "    ).transform_filter(label),\n",
     "\n",
-    "chart_5.mark_text(align='left', dx=5, dy=-5).encode(\n",
+    "chart_6.mark_text(align='left', dx=5, dy=-5).encode(\n",
     "        text='count(primary_type)'\n",
     "    ).transform_filter(label),\n",
     "    data=df\n",
@@ -816,26 +821,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> REMOVE THE FOLLOWING TEXT // Noch nicht fertig\n",
+    "### Conclusion\n",
     "\n",
-    "### In this section you'll include a summary of what you have learned about your (research) question along with (statistical) arguments supporting your conclusions.\n",
+    "With the help of our analysis, the important questions \"Which kind of crimes happen particularly frequently and where/when do they happen?\" could be clarified in order to answer the question of \"Where the new Crime Prevention Centers should be built in Chicago?\".\n",
     "\n",
-    "With the help of our analysis, the important questions \"Which kind of crimes happen particularly frequently and where/when do they happen?\" could be clarified in order to answer the question of \"Where the new Crime Prevention Center should be built in Chicago?\".\n",
+    "We have learned that the crime types vary in frequency. For example, the offences \"theft\" and \"assault_and_battery\" account for over 50% of all registered cases. Other crimes such as \"sexual_crime\" or \"homicide\" are (fortunately) much less common. But we also found out that most of the crimes occur during the day, between 9pm and 7pm. The course of the line shows how crimes also adapt to people's daily rhythms. Of course, we were also able to get an overview of which districts of Chicago have the most crimes and how serious they are.\n",
     "\n",
-    "We have learned that the crime types vary in frequency. For example, the offences \"theft\" and \"assault and battery\" account for over 50% of all registered cases. Other crimes such as \"sexual crime\" or \"homicide\" are (fortunately) much less common. But we also found out that most of the crimes occur during the day, between 9pm and 7pm. The course of the line shows how crimes also adapt to people's daily rhythms.\n",
+    "The data show that there are particular hot spots in the city. These are located around the city center in district 1, where a particularly high number of (lighter) crimes of \"group_1\" occur. In the outer areas of the city, e.g. in and around district 11 and districts 6 and 8, there is an increase in (more serious) crimes of \"group_2\".\n",
     "\n",
-    "### Hypotheses:\n",
     "\n",
-    "There are neighborhoods in Chicago where the most (dangerous) crimes/incidents occur.\n",
-    "There is a certain time of a day when the most crime occur.\n",
+    "Due to the data situation (2018 and 2019), we were unable to determine a trend as to whether there will be fewer or more crimes over time. To determine this, we would need to analyse data of an even longer period of time.\n",
+    "One limitation of our analysis is that we were not able to work very statistically. This is mainly due to the fact that the data are mostly categorical. The observations allow us to find out where, when and which crime took place, but not who and why the crime was committed. Also, were not able to statistically verify the two hypotheses. This would have to be done better in the future.\n",
     "\n",
-    "### In addition, discuss the limitations of your analysis and provide suggestions on ways the analysis could be improved. (Hendrik)\n",
     "\n",
-    "Due to the data situation (2018 and 2019), we were unable to determine a trend as to whether there will be fewer or more crimes over time. To determine this, we would need data over an even longer period of time.\n",
-    "\n",
-    "### Any potential issues pertaining to the reliability and validity of your data and appropriateness of the statistical analysis should also be discussed here. (Hendrik)\n",
-    "\n",
-    "### Lastly, this section will include your recommended action. (Esad)"
+    "In addition, it was not easy at the beginning to summarize the more than 40 different types of offenses in a meaningful way. As a result, the individual offenses may not always be accurately reflected in our analysis.\n",
+    "Also, a grouping according to three different severity rates is rather subjective and may vary from viewer to viewer.\n",
+    "\n"
    ]
   },
   {
@@ -843,19 +844,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can clearly see that Chicago is a very violent city and that the city council needs to react or prevent. \n",
+    "### Recommended action\n",
     "\n",
-    "Therefore we still suggest Crime Prevention Center in the districts. We understand that it is to expensive to open them in every district. If we think about our analysis and our graphs we would open at least 5 Center in the most violent districts:\n",
+    "We can clearly see that Chicago is a violent city and that the city council needs to react to prevent or lower these in the future. \n",
     "\n",
-    "- 1. District 11 (5432 incidents)\n",
-    "- 2. District 6 (4712)\n",
-    "- 3. District 8 (4591)\n",
-    "- 4. District 1 (4560)\n",
-    "- 5. District 18 (4485)\n",
+    "Therefore we suggest Crime Prevention Centers in the districts. We understand that it is to expensive to open them in every district. Considering our analysis and graphs we would open at least 5 Centers in the most violent districts with focus on special crime types/groups:\n",
     "\n",
-    "It also makes sense to open the Crime Prevention Center in certain streets, as there are some very violent streets. Some of those streets are going across 2 districts like the State street, which is also the most violent street in Chicago.\n",
+    "- 1. District 11 (5432 incidents) - focus on \"narcotics\" and general \"group_2\". \n",
+    "- 2. District 6 (4712) - focus on \"criminal damage\" and general \"group_2\".\n",
+    "- 3. District 8 (4591) - focus on \"criminal damage\" and general \"group_2\".\n",
+    "- 4. District 1 (4560) - focus on \"theft\" and \"deceptive practice\" and general \"group_1\".\n",
+    "- 5. District 18 (4485) - focus on \"theft\" and \"deceptive practice\" and generals \"group_1\".\n",
     "\n",
-    "We also understand that the Prevention Center can't be open 24 hours a day, so we would adapt their opening hours to the time when the most crime happen statisticly. We would suggest opening times at least from 11am to 8 pm because this are the most violent hours, especially at 12pm and 7 pm. The 5 most violent hours are:\n",
+    "It also makes sense to open the Crime Prevention Centers in certain streets, as there are some very violent streets. Most of these streets are going through 2 or more districts, like the State Street or Michigan Avenue, which are the most violent streets in Chicago.\n",
+    "\n",
+    "We also understand that the Prevention Centers can't be open 24 hours a day, so we would adapt their opening hours to the time when the most crime happen statisticly. We would suggest opening times at least from 11am to 8 pm because this are the most violent hours, especially around 12pm and 7 pm. The 5 most violent hours are:\n",
     "\n",
     "- 1. 12pm   (4663 incidents)\n",
     "- 2. 7pm    (4413)\n",
@@ -863,7 +866,7 @@
     "- 4. 3pm    (4226)\n",
     "- 5. 5pm    (4225)\n",
     "\n",
-    "If we think about the different months over the year, we would still recommend too keep the Prevention Center open the whole year, because there are no months with a significant decrease of crime.\n",
+    "Consider the months over the year, we would still recommend to keep the Prevention Center open the whole year, because there are no months with a significant decrease of crime.\n",
     "\n"
    ]
   }
@@ -884,12 +887,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:50:36) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d2f2d2082dad434e9227570e7053f7112e7d2c1e0982d1c6c76272549d47fe44"
+    "hash": "afb2be5e0fa59e7cc779d156738954d1f1d32fb360bdb57d692d068a241e7d01"
    }
   }
  },
