--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -177,6 +177,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview about the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -227,6 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Distribution of crimes over the two years (2018 + 2019)\n",
     "chart_3 = alt.Chart(df).mark_bar().encode(\n",
     "    y=alt.Y('year:N',\n",
     "            axis=alt.Axis(title=\"YEAR\",\n",
@@ -265,6 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Distribution of crimes per year in months\n",
     "chart_4 = alt.Chart(df).mark_line().encode(\n",
     "    x=alt.X('month:N',\n",
     "            axis=alt.Axis(title=\"MONTH\",\n",
@@ -308,6 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Distribution of crimes per day in hours\n",
     "chart_5 = alt.Chart(df).mark_line().encode(\n",
     "    x=alt.X('hour:N',\n",
     "            axis=alt.Axis(title=\"HOUR\",\n",
@@ -369,6 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Distribution of the crimes by type\n",
     "ch = alt.Chart(df).mark_bar().encode(\n",
     "    x=alt.X(\"primary_type\", sort=\"-y\",\n",
     "            axis=alt.Axis(title=\"DISTRICT\",\n",
@@ -484,6 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Distribution of crime per disctrict in total\n",
     "district = alt.Chart(df).mark_bar().encode(\n",
     "    x=alt.X(\"district:N\",\n",
     "    sort=\"-y\",\n",
@@ -634,7 +647,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#map of chicago\n",
+    "#map of chicago (interactive)\n",
+    "#map\n",
     "choro = alt.Chart(gdf).mark_geoshape(\n",
     "    fill=\"white\", stroke='grey'\n",
     ").encode()\n",
@@ -691,7 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Line chart (interactive)\n",
     "# select a point for which to provide details-on-demand\n",
     "label = alt.selection_single(\n",
     "    encodings=['x'], # limit selection to x-axis value\n",
@@ -759,6 +773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Bar chart & stacked bar chart (interactive: drag to select single or multiple districts)\n",
     "order_crime = [\"theft\", \"assault_and_battery\",\"criminal_damage\", \"deceptive_practice\", \"burglary\", \"other_offense\", \"robbery_and_weapons\", \"narcotics\", \"homicide\", \"sexual_crime\"]\n",
     "\n",
     "brush = alt.selection(type='interval')\n",
