--- a/reports/appendix.ipynb
+++ b/reports/appendix.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Contains all graphs/data that could not fit into the report"
+    "# Contains all graphs/data that could not fit into the Report"
    ]
   },
   {
@@ -20,57 +20,47 @@
     "PATH = \"data/\"\n",
     "SUBPATH = \"processed/\"\n",
     "FILE = \"chicago_crimes-20230130-1108\"\n",
-    "FORMAT = \".csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "FORMAT = \".csv\"\n",
+    "\n",
     "import altair as alt\n",
     "from vega_datasets import data\n",
     "alt.data_transformers.disable_max_rows()\n",
     "\n",
     "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#load crime dataset\n",
+    "df = pd.read_csv(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)\n",
+    "\n",
     "#Geopandas library to work with Chicago map\n",
-    "import geopandas as gpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import geopandas as gpd\n",
+    "\n",
     "PARENT_PATH = str(Path().resolve().parent) + \"/\"\n",
     "PATH = \"data/\"\n",
     "SUBPATH = \"external/\"\n",
     "FILE = \"wards\"\n",
     "FORMAT = \".shp\"\n",
     "\n",
-    "gdf = gpd.read_file(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)"
+    "#load map dataset\n",
+    "gdf = gpd.read_file(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)\n",
+    "\n",
+    "#drop observations which did not made it into our report\n",
+    "df.drop(['id', 'ward', 'day'], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "cat_list = [\"block\",\"primary_type\", \"primary_group\", \"district\", \"year\", \"month\", \"hour\"]\n",
+    "\n",
+    "#convert to category\n",
+    "for i in cat_list:\n",
+    "    df[i] = df[i].astype(\"category\")\n",
+    "\n",
+    "date_list = [\"date\"]\n",
+    "\n",
+    "#convert date to datetime\n",
+    "for i in date_list:\n",
+    "    df[i] = df[i].astype(\"datetime64\")"
    ]
   },
   {
@@ -539,6 +529,31 @@
    "source": [
     "display(df[(df['block'] == \"ashland_ave\")]) # kedzie_ave 92, pulaski_rd 213, western_ave 27, madison_st 274"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribution of crimes per block/street\n",
+    "\n",
+    "The 5 streets with the most reported crimes are:\n",
+    "\n",
+    "- 1. State Street (1575)\n",
+    "- 2. Michigan Avenue (1520)\n",
+    "- 3. Halsted Street (1049)\n",
+    "- 4. Ashland Avenue (925)\n",
+    "- 5. Clark Street (845)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"block\"].value_counts().nlargest(5)"
+   ]
   }
  ],
  "metadata": {
@@ -557,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:01:00) \n[Clang 13.0.1 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
