--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -361,8 +361,8 @@
    "source": [
     "### Distribution of the crimes by type\n",
     "\n",
-    "- most: \"theft\" and \"assault_and_battery\"\n",
-    "- least: \"sexual_crime\" and \"homicide\""
+    "- Most: \"theft\" and \"assault_and_battery\"\n",
+    "- Least: \"sexual_crime\" and \"homicide\""
    ]
   },
   {
@@ -453,11 +453,11 @@
    "source": [
     "Here we can see in which districts most crime happen (in %).\n",
     "The most violent districts are:\n",
-    "- 1. District 11 (7,1 % of all crime)\n",
-    "- 2. District 6 (6,2 %)\n",
-    "- 3. District 8 (6,0 %)\n",
-    "- 4. District 1 (6,0 %)\n",
-    "- 5. District 18 (5,9%)"
+    "1. District 11 (7,1 % of all crime)\n",
+    "2. District 6 (6,2 %)\n",
+    "3. District 8 (6,0 %)\n",
+    "4. District 1 (6,0 %)\n",
+    "5. District 18 (5,9%)"
    ]
   },
   {
@@ -865,21 +865,21 @@
     "\n",
     "Therefore we suggest Crime Prevention Centers in the districts. We understand that it is to expensive to open them in every district. Considering our analysis and graphs we would open at least 5 Centers in the most violent districts with focus on special crime types/groups:\n",
     "\n",
-    "- 1. District 11 (5432 incidents) - focus on \"narcotics\" and general \"group_2\". \n",
-    "- 2. District 6 (4712) - focus on \"criminal damage\" and general \"group_2\".\n",
-    "- 3. District 8 (4591) - focus on \"criminal damage\" and general \"group_2\".\n",
-    "- 4. District 1 (4560) - focus on \"theft\" and \"deceptive practice\" and general \"group_1\".\n",
-    "- 5. District 18 (4485) - focus on \"theft\" and \"deceptive practice\" and generals \"group_1\".\n",
+    "1. District 11 (5432 incidents) - focus on \"narcotics\" and general \"group_2\". \n",
+    "2. District 6 (4712) - focus on \"criminal damage\" and general \"group_2\".\n",
+    "3. District 8 (4591) - focus on \"criminal damage\" and general \"group_2\".\n",
+    "4. District 1 (4560) - focus on \"theft\" and \"deceptive practice\" and general \"group_1\".\n",
+    "5. District 18 (4485) - focus on \"theft\" and \"deceptive practice\" and generals \"group_1\".\n",
     "\n",
     "It also makes sense to open the Crime Prevention Centers in certain streets, as there are some very violent streets. Most of these streets are going through 2 or more districts, like the State Street or Michigan Avenue, which are the most violent streets in Chicago.\n",
     "\n",
     "We also understand that the Prevention Centers can't be open 24 hours a day, so we would adapt their opening hours to the time when the most crime happen statisticly. We would suggest opening times at least from 11am to 8 pm because this are the most violent hours, especially around 12pm and 7 pm. The 5 most violent hours are:\n",
     "\n",
-    "- 1. 12pm   (4663 incidents)\n",
-    "- 2. 7pm    (4413)\n",
-    "- 3. 6pm    (4383)\n",
-    "- 4. 3pm    (4226)\n",
-    "- 5. 5pm    (4225)\n",
+    "1. 12pm   (4663 incidents)\n",
+    "2. 7pm    (4413)\n",
+    "3. 6pm    (4383)\n",
+    "4. 3pm    (4226)\n",
+    "5. 5pm    (4225)\n",
     "\n",
     "Consider the months over the year, we would still recommend to keep the Prevention Center open the whole year, because there are no months with a significant decrease of crime.\n",
     "\n"
